2015-02-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 34558: Doc/Zsh/func.yo: preexec doc erroneously claimed $1
	was empty if line removed from history.

2015-02-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 34551: Src/builtin.c: Avoid adding an extra "/" to the
	target path in cd_try_chdir() when the current directory is "/"

2015-02-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 34543: Src/input.c, Src/lex.c: Fix crash on garbage bytes
	inside $(...)

2015-02-14  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Doc/Zsh/prompt.yo: Fix typo from 28487.

2015-02-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34546: Src/exec.c, Test/D04parameter.ztst: fix another
	oddity with $_ and anonymous functions and add tests.

2015-02-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 34530: Src/exec.c, Test/E01options.ztst: revised fix
	for PRINT_EXIT_VALUE from anonymous functions.

2015-02-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34519: Src/exec.c: handle $_ with arguments to anonymous
	function.

2015-02-12  Barton E. Schaefer  <schaefer@zsh.org>

	* 34514: Src/exec.c, Src/parse.c, Test/E01options.ztst:
	Back out 34485, an alternate solution needs to be worked
	out.  (Tweaked to keep the unrelated hunk of the E01 test.)

	* 34476: Completion/Base/Utility/_store_cache: change the
	assignment format to avoid potentially expensive lexical
	analysis of the array values

2015-02-11  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19850: Doc/Zsh/params.yo, Src/watch.c: watch variable
	supports patterns for user, tty and host names.

2015-02-10  Mikael Magnusson  <mikachu@gmail.com>

	* 34488: Src/builtin.c: Fix use-after-free for print -zf and
	print -sf

	* 34490: Src/builtin.c: Fix leak on print -zf/-sf error

2015-02-09  Peter Stephenson  <p.stephenson@samsung.com>

	* 34485: Src/exec.c, Src/parse.c, Test/E01options.ztst:
	rationalise some more anonymous function behaviour:
	don't try to handle as "simple" case as there are too